--- a/src/styles.css
+++ b/src/styles.css
@@ -97,3 +97,9 @@ input:hover {
   font-size: 10px;
   margin-top: 10px;
 }
+
+.current-temperature .active {
+  color: #707070;
+  cursor: default;
+  text-decoration: none;
+}
