--- a/src/styles.css
+++ b/src/styles.css
@@ -53,6 +53,8 @@ input:focus-visible {
 
 .icon {
   width: 80px;
+  display: block;
+  margin: 0 auto;
 }
 .date {
   text-align: center;
@@ -62,14 +64,35 @@ input:focus-visible {
 
 .weather-description {
   margin: 40px 5px 0px 5px;
-  position: relative;
+  /*position: relative;*/
   font-weight: bolder;
-  padding: 30px;
+  /*padding: 30px;*/
 }
 .description {
   text-align: center;
   font-size: 20px;
 }
+i {
+  font-size: 45px;
+}
+.wind {
+  font-size: 20px;
+  text-align: center;
+  margin-top: 10px;
+}
+.wind-speed {
+  margin-top: 21px;
+}
+
+.humidity {
+  font-size: 20px;
+  text-align: center;
+  margin-top: 15px;
+}
+.humidity-text {
+  margin-top: 17px;
+}
+
 .humidity-windy {
   text-align: center;
   font-size: 15px;
