--- a/src/styles.css
+++ b/src/styles.css
@@ -24,7 +24,7 @@ input:focus-visible {
 }
 
 .container {
-  max-width: 40%;
+  max-width: 500px;
   margin-top: 50px;
   font-family: "Nunito", sans-serif;
   color: #707070;
