--- a/src/styles.css
+++ b/src/styles.css
@@ -116,7 +116,7 @@ i {
   border-radius: 20px;
   padding-top: 10px;
   padding-bottom: 10px;
-  margin: 10px;
+  margin: 8px;
   transition: all 200ms ease-out;
 }
 
@@ -126,7 +126,8 @@ i {
   color: white;
   cursor: pointer;
 }
-.weather-forecaste-date {
+
+.weather-forecast-date {
   font-size: 12px;
 }
 .weather-forecast-temperature {
