--- a/src/styles.css
+++ b/src/styles.css
@@ -114,9 +114,9 @@ i {
   text-align: center;
   border: 1px solid #f1f1f1;
   border-radius: 20px;
-  padding-top: 10px;
+  /* padding-top: 10px;
   padding-bottom: 10px;
-  margin: 8px;
+  margin: 8px;*/
   transition: all 200ms ease-out;
 }
 
